<resources>
    <string name="app_name">Game stats</string>
    <string name="username">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="retypePassword">Retype the password</string>
    <string name="register">Register</string>
    <string name="fullName">Username</string>
    <string name="errorEmailVerification">Check you email to verify your account</string>
    <string name="errorLogin">Failed to log in!</string>
    <string name="errorPasswordLength">Please use a password at least 6 characters long</string>
    <string name="errorEmail">Check e-mail address</string>
    <string name="errorEmptyFields">Some of the fields are empty</string>
    <string name="errorPasswordMissmatch">Entered passwords don\'t match</string>
    <string name="successfulRegistration">User has been registered successfully! You can log in now.</string>
    <string name="unsuccessfulRegistration">Failed to register! Try again!</string>
    <string name="choose_players">Choose players!</string>
    <string name="done">Done</string>
    <string name="choose_team">Choose team</string>
    <string name="choose">Choose</string>
    <string name="manage_teams">Manage teams</string>
    <string name="join_team">Join team</string>
    <string name="team_name">Team name</string>
    <string name="team_password">Team password</string>
    <string name="join">Join</string>
    <string name="create_team">Create team</string>
    <string name="create">Create</string>
    <string name="toastTeamJoined">Team joined successfully</string>
    <string name="toastErrorFetching">Error fetching data</string>
    <string name="labelWins">Wins</string>
    <string name="labelGamesPlayed">Games played</string>
    <string name="labelGameToWinRatio">Win to game ratio</string>
    <string name="toastError">Error</string>
    <string name="toastChooseTeam">You have to join or create a team first</string>
    <string name="toastChoosePlayer">You must choose at least one player</string>
    <string name="toastDataAdded">Data added successfully</string>
    <string name="welcomeSplash">Welcome\u0020</string>
    <string name="welcomeSplashAlternative">Welcome Player</string>
    <string name="retype_team_password">Retype team password</string>
    <string name="choose_again">Choose again</string>
    <string name="verified">Verified</string>
    <string name="errorUsernameExists">Username already exists.</string>
    <string name="who_won">Enter in order:</string>
    <string name="add_win">Enter</string>
</resources>