<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUser">

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/username"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/fullName"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFullName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/etRegisterRetypePassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/retypePassword"
        android:inputType="textPassword"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etRegisterRetypePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/register"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/text_color"
        android:textSize="16sp" />

</RelativeLayout>