<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseTeam">

    <TextView
        android:id="@+id/tvJoinTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/join_team"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/availableTeamsTV"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvJoinTeam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/team_name"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/etJoinTeamPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/availableTeamsTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/team_password"
        android:inputType="textPassword"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etJoinTeamPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/join"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvCreateTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnJoin"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/create_team"
        android:textColor="@color/text_color"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/etCreateTeam"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCreateTeam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/team_name"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/etCreateTeamPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCreateTeam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/team_password"
        android:inputType="textPassword"
        android:textColor="@color/text_color" />

    <EditText
        android:id="@+id/etCreateTeamRetypePassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCreateTeamPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:hint="@string/retype_team_password"
        android:inputType="textPassword"
        android:textColor="@color/text_color" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etCreateTeamRetypePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/create"
        android:textColor="@color/text_color"
        android:textSize="18sp" />

</RelativeLayout>