<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvChooseTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:text="@string/choose_team"
        android:layout_centerHorizontal="true"/>

    <Spinner
        android:id="@+id/joinedTeamsDropDown"
        android:layout_below="@+id/tvChooseTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btnChoose"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:text="@string/choose"
        android:textSize="18sp"
        android:layout_below="@id/joinedTeamsDropDown"/>
    <TextView
        android:id="@+id/tvManageTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/manage_teams"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"/>

</RelativeLayout>